Updated HTML documentation

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Dinosaur API</h1>
-    <p>Please use localhost:8000/api/dinosaur-name</p>
+    <p>Please use https://dinosaur-api-100devs.herokuapp.com/api/dinosaur-name</p>
 </body>
 </html>
